# OpenEnv

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/docs/: CONTRIBUTING.md
.claude/skills/release/: SKILL.md
.github/PULL_REQUEST_TEMPLATE/: release.md
.github/workflows/: TEMP_pr_docs_preview.yml  auto-bump-version.yml  build_documentation.yml  build_pr_documentation.yml  docker-build.yml  package-ci.yml  publish-pypi.yml  publish-testpypi.yml  test.yml  upload_pr_documentation.yml
docs/: README.md
docs/source/: _toctree.yml  conf.py  contributing.md  environments.md  index.md  release-notes.md
docs/source/environments/: agent_world_model.md  atari.md  browsergym.md  calendar.md  carla.md  chat.md  chess.md  coding.md  coding_agent.md  coding_tools.md  connect4.md  dipg.md  dm_control.md  echo.md  finqa.md  finrl.md  git.md  grid_world.md  julia.md  jupyter.md  kernrl.md  maze.md  openapp.md  opencode.md  openspiel.md  reasoning_gym.md  repl.md  snake.md  sophistry_bench_sprint.md  sumo.md  tbench2.md  terminus.md  textarena.md  unity.md  websearch.md  wildfire.md
docs/source/getting_started/: README.rst  contributing-envs.md  environment-builder.md  plot_01_introduction_quickstart.py
docs/source/guides/: concepts.md  environment-anatomy.md  first-environment.md  index.md  rewards.md  simulation-vs-production.md
docs/source/reference/: cli.md  index.md
docs/source/tutorials/: end-to-end-walkthrough.md  index.md  mcp-environment.md  openenv-tutorial.md  rl-training-2048.md  sft-warmup.md
envs/agent_world_model_env/: pyproject.toml
envs/agent_world_model_env/server/: Dockerfile  web_ui.py
envs/atari_env/server/: Dockerfile
envs/browsergym_env/: README.md  harness.py  models.py  pyproject.toml
envs/browsergym_env/server/: Dockerfile
envs/carla_env/: README.md
envs/carla_env/server/: Dockerfile  Dockerfile.real
envs/chat_env/: models.py
envs/coding_agent_env/: README.md  __init__.py  client.py  config.py  harness.py  models.py  opencode_runtime.py  openenv.yaml  pyproject.toml  task.py
envs/coding_agent_env/sandbox/: __init__.py  build_template.py
envs/coding_agent_env/server/: Dockerfile  __init__.py  app.py  coding_environment.py  gradio_ui.py
envs/dm_control_env/: pyproject.toml
envs/echo_env/: models.py
envs/finqa_env/: uv.toml
envs/git_env/: README.md
envs/grid_world_env/: README.md  pyproject.toml
envs/maze_env/: README.md
envs/minesweeper_env/: README.md  __init__.py  client.py  models.py  pyproject.toml
envs/mini_swe_env/: README.md  __init__.py  client.py  grading.py  harness.py  models.py  pyproject.toml  task_loader_swebench_lite.py  task_loader_swegym.py
envs/mini_swe_env/async_grpo/: __init__.py  control_plane.py  interception_app.py  rollout_worker.py  swe_tool_env.py
envs/mini_swe_env/async_grpo/space_app/: Dockerfile  README.md  deploy_hf_space.sh  start.sh
envs/mini_swe_env/extensions/: swe-answer.ts  swe-grade.sh
envs/mini_swe_env/server/: __init__.py  app.py  sandbox_mcp_server.py  swe_environment.py
envs/openapp_env/: .dockerignore  pyproject.toml
envs/openapp_env/server/: Dockerfile
envs/opencode_env/: README.md  __init__.py  client.py  config.py  harness.py  models.py  opencode_runtime.py  pyproject.toml
envs/openspiel_env/: harness.py
envs/reasoning_gym_env/: README.md  harness.py  pyproject.toml
envs/repl_env/: runner.py
envs/sophistry_bench_sprint_env/: README.md  client.py  models.py  pyproject.toml
envs/sophistry_bench_sprint_env/server/: app.py  sophistry_bench_sprint_environment.py
envs/sophistry_bench_sprint_env/tests/: test_environment.py
envs/terminus_env/: README.md  __init__.py  client.py  harness.py  models.py  pyproject.toml
envs/textarena_env/: README.md
envs/unity_env/: pyproject.toml
envs/websearch_env/: README.md
examples/: OpenEnv_Tutorial.ipynb  atari_simple.py  browsergym_codex_eval.py  browsergym_harness_eval_common.py  coding_agent_env_simple.py  end_to_end_walkthrough.ipynb  evaluation_inspect.ipynb  import_integrations_demo.sh  mcp_environment.ipynb  opencode_env_simple.py  openenv_introduction_quickstart.ipynb  rubrics.ipynb  sft_warmup.ipynb
examples/grpo_blackjack/: README.md  grpo_blackjack_tutorial.ipynb
examples/mini_swe_env/: README.md  collect_rollouts_best_of_n.py  deploy_collect_space.sh  pyproject.toml  run_swe_sample.py  test_version_compat.py  train_swe_async_grpo.py  trajectory_store.py
examples/mini_swe_env/async_grpo/: rollout_worker.py  sbatch_multinode_async_grpo.sh  submit_multinode_async_grpo.sh
examples/mini_swe_env/async_grpo/space_app/: Dockerfile  README.md  deploy_hf_space.sh  start.sh
examples/mini_swe_env/tasks/: mini_swe_eval.jsonl  mini_swe_train.jsonl
rfcs/: 000-project-phases.md  005-agentic-harnesses.md  006-external-environment-imports.md  006-hf-rl-environment-datasets.md  README.md
scripts/: pr_tracker.py  prepare_hf_deployment.sh  sync_env_docs.py
scripts/swe/: build_mini_subset.py
tests/core/: test_cli_agent_driver.py  test_docker_sandbox_backend.py  test_harness_adapters.py  test_harness_collect.py  test_harness_runtime.py  test_hf_sandbox_backend.py  test_interception_server.py  test_local_sandbox_backend.py  test_pi_context.py  test_task_api.py
tests/envs/: test_auto_env.py  test_browsergym_harness.py  test_calendar_user_manager_logging.py  test_coding_agent_env.py  test_coding_safety_transform.py  test_grid_world.py  test_julia_env.py  test_minesweeper_env.py  test_opencode_env.py  test_python_codeact_reset.py  test_qed_math_environment.py  test_repl_env.py  test_repl_env_reset_cache.py  test_sophistry_bench_sprint_environment.py  test_swe_async_rollout_worker.py  test_swe_grading.py  test_swe_task_loader.py  test_terminus_environment.py  test_terminus_harness.py  test_train_swe_async_grpo.py
tests/scripts/: test_browsergym_harness_eval_examples.py
tests/test_cli/: test_collect.py  test_import_env.py  test_init.py  test_push.py  test_serve.py
tutorial/: 01-environments.md  04-training.md  README.md
tutorial/examples/: OpenEnv_Tutorial.ipynb  unsloth_2048.ipynb  wordle.py
(+120 files in other folders)
