[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-browsergym_env"
version = "0.1.0"
description = "BrowserGym Environment for OpenEnv - Web automation using Playwright"
requires-python = ">=3.10,<3.13"
dependencies = [
    "openenv-core[core]>=0.2.3",
    "browsergym-core==0.14.3",
    "browsergym-miniwob==0.14.3",
    "gymnasium>=0.29.0",
    "playwright==1.44.0",
    "greenlet==3.0.3",
    "Pillow>=10.0.0",
    "chromium",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=4.0.0",
    "ipykernel>=6.29.5",
]

[project.scripts]
server = "browsergym_env.server.app:main"

[tool.setuptools]
packages = ["browsergym_env", "browsergym_env.server"]
package-dir = { "browsergym_env" = ".", "browsergym_env.server" = "server" }

[tool.setuptools.package-data]
browsergym_env = ["**/*.yaml", "**/*.yml", "**/*.md"]

[tool.uv]
# libwebarena==0.0.4 (pulled in by browsergym-webarena>=0.13.1) pins beartype==0.12.0
# on Windows, conflicting with openenv-core's beartype>=0.20.0 requirement.
# Override to allow a compatible version on all platforms.
override-dependencies = ["beartype>=0.20.0"]
