# Copyright (c) Meta Platforms, Inc. and affiliates.
# All rights reserved.
#
# This source code is licensed under the BSD-style license found in the
# LICENSE file in the root directory of this source tree.

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-mini-swe-env"
version = "0.1.0"
description = "Mini SWE environment for OpenEnv — SWE-Gym task training with Pi agent and Async GRPO."
requires-python = ">=3.10"
dependencies = [
    # Core OpenEnv (server + MCP). 0.3.0 ships the harness runtime.
    "openenv-core[core]>=0.3.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "fastmcp>=3.3.0",
    "requests>=2.25.0",
    "aiohttp>=3.13.5",
    "datasets>=4.8.0",
]

[project.optional-dependencies]
train = [
    "trl>=1.4.0",
    "accelerate>=1.13.0",
    "hf-sandbox>=0.1.1",
    "datasets>=4.8.0",
    "aiohttp>=3.13.5",
    "fastmcp>=3.3.0",
]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0", "pytest-cov>=4.0.0"]

[project.scripts]
server = "mini_swe_env.server.app:main"

[tool.setuptools]
include-package-data = true
packages = ["mini_swe_env", "mini_swe_env.server", "mini_swe_env.async_grpo"]
package-dir = { "mini_swe_env" = ".", "mini_swe_env.server" = "server", "mini_swe_env.async_grpo" = "async_grpo" }
